APS2/parser.output
   0  $accept : %entry% $end

   1  prog : block

   2  block : LBRA cmds RBRA

   3  cmds : stat
   4       | dec SEMICOL cmds
   5       | stat SEMICOL cmds

   6  stat : ECHO expr
   7       | SET lval expr
   8       | IF1 expr block block
   9       | WHILE expr block
  10       | CALL1 IDENT exprs

  11  dec : CONST IDENT typing expr
  12      | FUN IDENT typing LBRA args RBRA expr
  13      | FUN REC IDENT typing LBRA args RBRA expr
  14      | VAR IDENT typing
  15      | PROC IDENT LBRA args RBRA block
  16      | PROC REC IDENT LBRA args RBRA block

  17  typing : TPRIM
  18         | LPAR TYPEVEC typing RPAR
  19         | LPAR typings ARROW typing RPAR

  20  typings : typing
  21          | typing STAR typings

  22  arg : IDENT COL typing

  23  args : arg
  24       | arg COMMA args

  25  expr : TRUE
  26       | FALSE
  27       | NUM
  28       | IDENT
  29       | LPAR PRIM exprs RPAR
  30       | LPAR NTH exprs RPAR
  31       | LBRA args RBRA expr
  32       | LPAR expr exprs RPAR
  33       | LPAR IF expr expr expr RPAR

  34  exprs : expr
  35        | expr exprs

  36  lval : IDENT
  37       | LPAR NTH lval expr RPAR

  38  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (38)

	LBRA  shift 3
	.  error

	prog  goto 4
	block  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	block : LBRA . cmds RBRA  (2)

	ECHO  shift 6
	FUN  shift 7
	CONST  shift 8
	VAR  shift 9
	PROC  shift 10
	SET  shift 11
	IF1  shift 12
	WHILE  shift 13
	CALL1  shift 14
	.  error

	dec  goto 15
	stat  goto 16
	cmds  goto 17


state 4
	%entry% : '\001' prog .  (38)

	.  reduce 38


state 5
	prog : block .  (1)

	.  reduce 1


state 6
	stat : ECHO . expr  (6)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 24


state 7
	dec : FUN . IDENT typing LBRA args RBRA expr  (12)
	dec : FUN . REC IDENT typing LBRA args RBRA expr  (13)

	REC  shift 25
	IDENT  shift 26
	.  error


state 8
	dec : CONST . IDENT typing expr  (11)

	IDENT  shift 27
	.  error


state 9
	dec : VAR . IDENT typing  (14)

	IDENT  shift 28
	.  error


state 10
	dec : PROC . IDENT LBRA args RBRA block  (15)
	dec : PROC . REC IDENT LBRA args RBRA block  (16)

	REC  shift 29
	IDENT  shift 30
	.  error


state 11
	stat : SET . lval expr  (7)

	LPAR  shift 31
	IDENT  shift 32
	.  error

	lval  goto 33


state 12
	stat : IF1 . expr block block  (8)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 34


state 13
	stat : WHILE . expr block  (9)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 35


state 14
	stat : CALL1 . IDENT exprs  (10)

	IDENT  shift 36
	.  error


state 15
	cmds : dec . SEMICOL cmds  (4)

	SEMICOL  shift 37
	.  error


state 16
	cmds : stat .  (3)
	cmds : stat . SEMICOL cmds  (5)

	SEMICOL  shift 38
	RBRA  reduce 3


state 17
	block : LBRA cmds . RBRA  (2)

	RBRA  shift 39
	.  error


state 18
	expr : LPAR . PRIM exprs RPAR  (29)
	expr : LPAR . NTH exprs RPAR  (30)
	expr : LPAR . expr exprs RPAR  (32)
	expr : LPAR . IF expr expr expr RPAR  (33)

	PRIM  shift 40
	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	IF  shift 41
	NTH  shift 42
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 43


state 19
	expr : LBRA . args RBRA expr  (31)

	IDENT  shift 44
	.  error

	arg  goto 45
	args  goto 46


state 20
	expr : TRUE .  (25)

	.  reduce 25


state 21
	expr : FALSE .  (26)

	.  reduce 26


state 22
	expr : NUM .  (27)

	.  reduce 27


state 23
	expr : IDENT .  (28)

	.  reduce 28


state 24
	stat : ECHO expr .  (6)

	.  reduce 6


state 25
	dec : FUN REC . IDENT typing LBRA args RBRA expr  (13)

	IDENT  shift 47
	.  error


state 26
	dec : FUN IDENT . typing LBRA args RBRA expr  (12)

	TPRIM  shift 48
	LPAR  shift 49
	.  error

	typing  goto 50


state 27
	dec : CONST IDENT . typing expr  (11)

	TPRIM  shift 48
	LPAR  shift 49
	.  error

	typing  goto 51


state 28
	dec : VAR IDENT . typing  (14)

	TPRIM  shift 48
	LPAR  shift 49
	.  error

	typing  goto 52


state 29
	dec : PROC REC . IDENT LBRA args RBRA block  (16)

	IDENT  shift 53
	.  error


state 30
	dec : PROC IDENT . LBRA args RBRA block  (15)

	LBRA  shift 54
	.  error


state 31
	lval : LPAR . NTH lval expr RPAR  (37)

	NTH  shift 55
	.  error


state 32
	lval : IDENT .  (36)

	.  reduce 36


state 33
	stat : SET lval . expr  (7)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 56


state 34
	stat : IF1 expr . block block  (8)

	LBRA  shift 3
	.  error

	block  goto 57


state 35
	stat : WHILE expr . block  (9)

	LBRA  shift 3
	.  error

	block  goto 58


state 36
	stat : CALL1 IDENT . exprs  (10)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 59
	exprs  goto 60


state 37
	cmds : dec SEMICOL . cmds  (4)

	ECHO  shift 6
	FUN  shift 7
	CONST  shift 8
	VAR  shift 9
	PROC  shift 10
	SET  shift 11
	IF1  shift 12
	WHILE  shift 13
	CALL1  shift 14
	.  error

	dec  goto 15
	stat  goto 16
	cmds  goto 61


state 38
	cmds : stat SEMICOL . cmds  (5)

	ECHO  shift 6
	FUN  shift 7
	CONST  shift 8
	VAR  shift 9
	PROC  shift 10
	SET  shift 11
	IF1  shift 12
	WHILE  shift 13
	CALL1  shift 14
	.  error

	dec  goto 15
	stat  goto 16
	cmds  goto 62


state 39
	block : LBRA cmds RBRA .  (2)

	.  reduce 2


state 40
	expr : LPAR PRIM . exprs RPAR  (29)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 59
	exprs  goto 63


state 41
	expr : LPAR IF . expr expr expr RPAR  (33)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 64


state 42
	expr : LPAR NTH . exprs RPAR  (30)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 59
	exprs  goto 65


state 43
	expr : LPAR expr . exprs RPAR  (32)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 59
	exprs  goto 66


state 44
	arg : IDENT . COL typing  (22)

	COL  shift 67
	.  error


state 45
	args : arg .  (23)
	args : arg . COMMA args  (24)

	COMMA  shift 68
	RBRA  reduce 23


state 46
	expr : LBRA args . RBRA expr  (31)

	RBRA  shift 69
	.  error


state 47
	dec : FUN REC IDENT . typing LBRA args RBRA expr  (13)

	TPRIM  shift 48
	LPAR  shift 49
	.  error

	typing  goto 70


state 48
	typing : TPRIM .  (17)

	.  reduce 17


state 49
	typing : LPAR . TYPEVEC typing RPAR  (18)
	typing : LPAR . typings ARROW typing RPAR  (19)

	TPRIM  shift 48
	TYPEVEC  shift 71
	LPAR  shift 49
	.  error

	typing  goto 72
	typings  goto 73


state 50
	dec : FUN IDENT typing . LBRA args RBRA expr  (12)

	LBRA  shift 74
	.  error


state 51
	dec : CONST IDENT typing . expr  (11)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 75


state 52
	dec : VAR IDENT typing .  (14)

	.  reduce 14


state 53
	dec : PROC REC IDENT . LBRA args RBRA block  (16)

	LBRA  shift 76
	.  error


state 54
	dec : PROC IDENT LBRA . args RBRA block  (15)

	IDENT  shift 44
	.  error

	arg  goto 45
	args  goto 77


state 55
	lval : LPAR NTH . lval expr RPAR  (37)

	LPAR  shift 31
	IDENT  shift 32
	.  error

	lval  goto 78


state 56
	stat : SET lval expr .  (7)

	.  reduce 7


state 57
	stat : IF1 expr block . block  (8)

	LBRA  shift 3
	.  error

	block  goto 79


state 58
	stat : WHILE expr block .  (9)

	.  reduce 9


state 59
	exprs : expr .  (34)
	exprs : expr . exprs  (35)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	RPAR  reduce 34
	RBRA  reduce 34
	SEMICOL  reduce 34

	expr  goto 59
	exprs  goto 80


state 60
	stat : CALL1 IDENT exprs .  (10)

	.  reduce 10


state 61
	cmds : dec SEMICOL cmds .  (4)

	.  reduce 4


state 62
	cmds : stat SEMICOL cmds .  (5)

	.  reduce 5


state 63
	expr : LPAR PRIM exprs . RPAR  (29)

	RPAR  shift 81
	.  error


state 64
	expr : LPAR IF expr . expr expr RPAR  (33)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 82


state 65
	expr : LPAR NTH exprs . RPAR  (30)

	RPAR  shift 83
	.  error


state 66
	expr : LPAR expr exprs . RPAR  (32)

	RPAR  shift 84
	.  error


state 67
	arg : IDENT COL . typing  (22)

	TPRIM  shift 48
	LPAR  shift 49
	.  error

	typing  goto 85


state 68
	args : arg COMMA . args  (24)

	IDENT  shift 44
	.  error

	arg  goto 45
	args  goto 86


state 69
	expr : LBRA args RBRA . expr  (31)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 87


state 70
	dec : FUN REC IDENT typing . LBRA args RBRA expr  (13)

	LBRA  shift 88
	.  error


state 71
	typing : LPAR TYPEVEC . typing RPAR  (18)

	TPRIM  shift 48
	LPAR  shift 49
	.  error

	typing  goto 89


state 72
	typings : typing .  (20)
	typings : typing . STAR typings  (21)

	STAR  shift 90
	ARROW  reduce 20


state 73
	typing : LPAR typings . ARROW typing RPAR  (19)

	ARROW  shift 91
	.  error


state 74
	dec : FUN IDENT typing LBRA . args RBRA expr  (12)

	IDENT  shift 44
	.  error

	arg  goto 45
	args  goto 92


state 75
	dec : CONST IDENT typing expr .  (11)

	.  reduce 11


state 76
	dec : PROC REC IDENT LBRA . args RBRA block  (16)

	IDENT  shift 44
	.  error

	arg  goto 45
	args  goto 93


state 77
	dec : PROC IDENT LBRA args . RBRA block  (15)

	RBRA  shift 94
	.  error


state 78
	lval : LPAR NTH lval . expr RPAR  (37)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 95


state 79
	stat : IF1 expr block block .  (8)

	.  reduce 8


state 80
	exprs : expr exprs .  (35)

	.  reduce 35


state 81
	expr : LPAR PRIM exprs RPAR .  (29)

	.  reduce 29


state 82
	expr : LPAR IF expr expr . expr RPAR  (33)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 96


state 83
	expr : LPAR NTH exprs RPAR .  (30)

	.  reduce 30


state 84
	expr : LPAR expr exprs RPAR .  (32)

	.  reduce 32


state 85
	arg : IDENT COL typing .  (22)

	.  reduce 22


state 86
	args : arg COMMA args .  (24)

	.  reduce 24


state 87
	expr : LBRA args RBRA expr .  (31)

	.  reduce 31


state 88
	dec : FUN REC IDENT typing LBRA . args RBRA expr  (13)

	IDENT  shift 44
	.  error

	arg  goto 45
	args  goto 97


state 89
	typing : LPAR TYPEVEC typing . RPAR  (18)

	RPAR  shift 98
	.  error


state 90
	typings : typing STAR . typings  (21)

	TPRIM  shift 48
	LPAR  shift 49
	.  error

	typing  goto 72
	typings  goto 99


state 91
	typing : LPAR typings ARROW . typing RPAR  (19)

	TPRIM  shift 48
	LPAR  shift 49
	.  error

	typing  goto 100


state 92
	dec : FUN IDENT typing LBRA args . RBRA expr  (12)

	RBRA  shift 101
	.  error


state 93
	dec : PROC REC IDENT LBRA args . RBRA block  (16)

	RBRA  shift 102
	.  error


state 94
	dec : PROC IDENT LBRA args RBRA . block  (15)

	LBRA  shift 3
	.  error

	block  goto 103


state 95
	lval : LPAR NTH lval expr . RPAR  (37)

	RPAR  shift 104
	.  error


state 96
	expr : LPAR IF expr expr expr . RPAR  (33)

	RPAR  shift 105
	.  error


state 97
	dec : FUN REC IDENT typing LBRA args . RBRA expr  (13)

	RBRA  shift 106
	.  error


state 98
	typing : LPAR TYPEVEC typing RPAR .  (18)

	.  reduce 18


state 99
	typings : typing STAR typings .  (21)

	.  reduce 21


state 100
	typing : LPAR typings ARROW typing . RPAR  (19)

	RPAR  shift 107
	.  error


state 101
	dec : FUN IDENT typing LBRA args RBRA . expr  (12)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 108


state 102
	dec : PROC REC IDENT LBRA args RBRA . block  (16)

	LBRA  shift 3
	.  error

	block  goto 109


state 103
	dec : PROC IDENT LBRA args RBRA block .  (15)

	.  reduce 15


state 104
	lval : LPAR NTH lval expr RPAR .  (37)

	.  reduce 37


state 105
	expr : LPAR IF expr expr expr RPAR .  (33)

	.  reduce 33


state 106
	dec : FUN REC IDENT typing LBRA args RBRA . expr  (13)

	LPAR  shift 18
	LBRA  shift 19
	TRUE  shift 20
	FALSE  shift 21
	NUM  shift 22
	IDENT  shift 23
	.  error

	expr  goto 110


state 107
	typing : LPAR typings ARROW typing RPAR .  (19)

	.  reduce 19


state 108
	dec : FUN IDENT typing LBRA args RBRA expr .  (12)

	.  reduce 12


state 109
	dec : PROC REC IDENT LBRA args RBRA block .  (16)

	.  reduce 16


state 110
	dec : FUN REC IDENT typing LBRA args RBRA expr .  (13)

	.  reduce 13


33 terminals, 14 nonterminals
39 grammar rules, 111 states
